# the-macro-library

./: .env  .gitignore  AUTHORS  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CNAME  Dockerfile  NEWS.md  NOTICE  PERFORMANCE.md  README.macro_bsearch.md  README.macro_cmp.md  README.macro_heap.md  README.macro_map.md  README.macro_sort.md  README.macro_test.md  README.macro_time.md  README.macro_to.md  README.md  _config.yml  build.sh  scaffold.yaml  themacrolibraryConfig.cmake.in
.changes/: 0.0.1.md
_layouts/: defaults.html
cmake/: Config.cmake.in
docs/: create_chart.py  macro_heap.md
examples/: CMakeLists.txt
examples/combos/: reverse.cc
examples/demo/: CMakeLists.txt  map_ints.c  max_heap_example.c  min_heap_example.c  search_ints.c  sort_ints.c  sort_ints_arg_cmp.c  sort_ints_cmp_arg.c  sort_ints_cmp_no_arg.c  sort_ints_compare_arg_cmp.c  sort_ints_compare_cmp_no_arg.c  sort_ints_less_arg.c  sort_ints_less_no_arg.c  test_qsort.c  test_sort_shell.c
examples/speed-test/: CMakeLists.txt  speed_test.cc  speed_test2.cc  speed_test_class.cc  speed_test_class2.cc  speed_test_class3.cc  speed_test_final.cc  speed_test_int.cc  speed_test_long.cc
include/: g  macro_bsearch.h  macro_cmp.h  macro_map.h  macro_sort.h
include/experimental/: macro_check_sorted_byte_delta.h
include/test/: macro_test_sort.h
include/the-macro-library/: macro_bsearch.h  macro_bsearch_code.h  macro_check_sorted.h  macro_cmp.h  macro_dutch_flag_partition.h  macro_heap.h  macro_heap_sort.h  macro_introsort.h  macro_isort.h  macro_map.h  macro_simple_partition.h  macro_skiplist.h  macro_sort.h  macro_string_id_map.h  macro_string_map.h  macro_string_root_map.h  macro_string_string_map.h  macro_swap.h  macro_test.h  macro_time.h  macro_to.h  macro_vecswap.h
include/the-macro-library/src/: macro_bsearch_code.h  macro_check_sorted.h  macro_dutch_flag_partition.h  macro_heap_sort.h  macro_introsort.h  macro_isort.h  macro_simple_partition.h  macro_skiplist_code.h  macro_swap.h  macro_to.h  macro_vecswap.h
tests/: CMakeLists.txt  build.sh
tests/src/: test_macro_bsearch.c  test_macro_cmp.c  test_macro_heap.c  test_macro_map.c  test_macro_skiplist.c  test_macro_sort.c  test_macro_time.c  test_macro_to.c
